# yoga-wellness-RAG

./: .env.example  .gitignore  Assignment - NextYou.txt  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_app.py  yoga_knowledge_base.md
.kiro/specs/wellness-rag-application/: design.md  requirements.md  tasks.md
backend/: __init__.py  config.py
backend/api/: __init__.py  dependencies.py  main.py  routes.py
backend/core/: __init__.py  cache.py  logging.py  rate_limiter.py
backend/models/: __init__.py  schemas.py
backend/services/: __init__.py
backend/services/chunking/: __init__.py  base.py  document_processor.py  semantic_chunker.py  service.py
backend/services/embeddings/: base.py  nvidia_service.py  sentence_transformer.py  service.py
backend/services/generation/: __init__.py  nvidia_llm.py  prompts.py  service.py
backend/services/logging/: __init__.py  mongo_logger.py
backend/services/retrieval/: __init__.py  engine.py  vector_db.py
backend/services/safety/: __init__.py  filter.py
frontend/: app.js  index.html  style.css
monitoring/: prometheus.yml
scripts/: init-mongo.js  process_knowledge_base.py  process_yoga_knowledge_base.py  reset_chromadb.py  verify_deployment.py
src/: config.py
src/core/: exceptions.py  logging.py
src/models/: schemas.py
src/services/chunking/: base.py  document_processor.py  semantic_chunker.py  service.py
src/services/embeddings/: __init__.py  base.py  service.py
src/services/retrieval/: vector_db.py
tests/: __init__.py  conftest.py  try_import.py
tests/api/: test_routes.py
tests/property/: __init__.py  design  task  test_chunking_properties.py  test_embedding_properties.py  test_generation_properties.py  test_logging_properties.py  test_retrieval_properties.py  test_safety_properties.py  test_vector_db_properties.py
tests/unit/: __init__.py  test_api_routes.py  test_chunking.py  test_embeddings.py
